correct printarray to reflect the default in trigger; added new triggerless variant; add syntax highlighting for numbers; background in program listing too dark for csoundqt, now a bit lighter

--- a/csound.css
+++ b/csound.css
@@ -4,7 +4,7 @@
 /* Free software, licensed by GNU Free Documentation License */
 
 pre.programlisting {
-  background-color: #e5e5e5;
+  background-color: #f0f0f0;
   padding: 10px 2em;
   border-style: dotted;
   border-width: 1px;
