--- a/syntax-highlighting.css
+++ b/syntax-highlighting.css
@@ -31,23 +31,23 @@ body .kr { color: green                             } /* Keyword.Reserved */
 body .kt { color: green                             } /* Keyword.Type */
 
 body .vc { color: green                             } /* Name.Attribute */
-body .nb { color: blue;         font-weight: bold   } /* Name.Builtin */
+body .nb { color: #3f15b5;         font-weight: bold   } /* Name.Builtin */
 body .bp { color: blue;         font-weight: bold   } /* Name.Builtin.Pseudo */
 body .nl { color: indianred;    font-weight: bold   } /* Name.Label */
-body .nt { color: brown                             } /* Name.Tag */
+body .nt { color: #AF260C;                             } /* Name.Tag */
 body .vg { color: darkred;      font-weight: bold   } /* Name.Variable.Global */
 body .vi { color: blue;         font-weight: bold   } /* Name.Variable.Instance */
 
 body .c  { color: green;        font-style:  italic } /* Comment */
 body .cm { color: green;        font-style:  italic } /* Comment.Multiline */
 body .cp { color: mediumorchid; font-weight: bold   } /* Comment.Preproc */
-body .c1 { color: green;        font-style:  italic } /* Comment.Single */
+body .c1 { color: #408080;        font-style:  italic } /* Comment.Single */
 body .cs { color: green;        font-style:  italic } /* Comment.Special */
 
 body .o  {                      font-weight: bold   } /* Operator */
 body .ow { color: green;        font-weight: bold   } /* Operator.Word */
 
-body .s  { color: peru                              } /* Literal.String */
+body .s  { color: #ba2121                           } /* Literal.String */
 body .sb { color: peru                              } /* Literal.String.Backtick */
 body .sc { color: peru                              } /* Literal.String.Char */
 body .sd { color: peru;         font-style:  italic } /* Literal.String.Doc */
@@ -59,3 +59,5 @@ body .sx { color: peru                              } /* Literal.String.Other */
 body .sr { color: peru                              } /* Literal.String.Regex */
 body .s1 { color: peru                              } /* Literal.String.Single */
 body .ss { color: peru                              } /* Literal.String.Symbol */
+body .mf { color: #0097a4                          } /* Number. float */ 
+body .mi { color: #0097a4                          } /* Number. int */ 
